--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "grunt-contrib-less": "^0.11.0",
     "matchdep": "^0.3.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-autoprefixer": "^0.7.2"
+    "grunt-autoprefixer": "^0.7.2",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-cssmin": "^0.9.0"
   }
 }
