--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-autoprefixer": "^0.7.2",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-cssmin": "^0.9.0"
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-contrib-imagemin": "^0.7.0"
   }
 }
