--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "description": "Open edX theme for IONISx",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "font-awesome": "~4.1.0"
   }
 }
