--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-autoprefixer": "^0.7.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-imagemin": "^0.7.0"
+    "grunt-contrib-imagemin": "^0.7.0",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
