--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-imagemin": "^0.7.0",
-    "grunt-contrib-copy": "^0.5.0"
+    "grunt-contrib-copy": "^0.5.0",
+    "time-grunt": "^0.3.2"
   }
 }
