--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "devDependencies": {
     "grunt": "^0.4.4",
     "grunt-contrib-less": "^0.11.0",
-    "matchdep": "^0.3.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-autoprefixer": "^0.7.2",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-cssmin": "^0.9.0",
     "grunt-contrib-imagemin": "^0.7.0",
     "grunt-contrib-copy": "^0.5.0",
-    "time-grunt": "^0.3.2"
+    "time-grunt": "^0.3.2",
+    "load-grunt-tasks": "^0.5.0"
   }
 }
