--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "private": true,
   "homepage": "https://github.com/IONISx/edx-theme",
   "description": "Open edX theme for IONISx",
-  "license": "MIT",
+  "license": "AGPL",
   "dependencies": {
     "bootstrap": "~3.3.0",
     "font-awesome": "~4.2.0"
