--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-bless": "^0.2.0",
     "time-grunt": "^1.1.0",
     "load-grunt-tasks": "^3.1.0"
   }
