--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   },
   "homepage": "https://github.com/IONISx/edx-theme",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-autoprefixer": "^2.2.0",
-    "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-bless": "^0.2.0",
-    "grunt-jscs": "^1.6.0",
-    "time-grunt": "^1.1.0",
-    "load-grunt-tasks": "^3.1.0"
+    "grunt": "0.4.5",
+    "grunt-contrib-less": "1.0.1",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-contrib-jshint": "0.11.2",
+    "grunt-contrib-cssmin": "0.12.2",
+    "grunt-contrib-imagemin": "0.9.4",
+    "grunt-contrib-copy": "0.8.0",
+    "grunt-autoprefixer": "3.0.0",
+    "grunt-bless": "0.2.0",
+    "grunt-jscs": "1.6.0",
+    "time-grunt": "1.1.1",
+    "load-grunt-tasks": "3.1.0"
   }
 }
